--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,23 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body{
+    background-color: #0f172a;
+}
+.card{
+    @apply 
+    text-white dark:text-black text-center overflow-hidden cursor-pointer
+    bg-slate-800 p-5 rounded relative before:content-['']
+    before:h-1 before:w-full before:absolute before:bg-gradient-to-r
+    from-fuchsia-400 to-fuchsia-900
+    before:top-0 before:left-0 transition-all ease-linear duration-300
+    hover:bg-slate-600 dark:hover:bg-[#e1e3f0] min-h-[250px] dark:bg-[#f0f3fa]
+}
+.overview-card{
+    @apply 
+    text-white dark:text-black text-center overflow-hidden cursor-pointer
+    bg-slate-800 p-5 rounded 
+    before:top-0 before:left-0 transition-all ease-linear duration-300
+    hover:bg-slate-600  dark:hover:bg-[#e1e3f0] dark:bg-[#f0f3fa]
 }
